--- a/main.html
+++ b/main.html
@@ -64,6 +64,23 @@
             width: 10%;
             margin-top: 20px;
         }
+        table {
+            width: 100%;
+            margin-top: 30px;
+            border-collapse: collapse;
+            background-color: #fff;
+        }
+        table, th, td {
+            border: 1px solid #ddd;
+        }
+        th, td {
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color: #333;
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -107,6 +124,31 @@
             <source src="audio.mp3" type="audio/mp3">
             Your browser does not support the audio tag.
         </audio>
+
+        <!-- Table Example -->
+        <h2>Content in Table Format</h2>
+        <table>
+            <tr>
+                <th>Item</th>
+                <th>Description</th>
+                <th>Price</th>
+            </tr>
+            <tr>
+                <td>Item 1</td>
+                <td>A description of item 1.</td>
+                <td>$10.00</td>
+            </tr>
+            <tr>
+                <td>Item 2</td>
+                <td>A description of item 2.</td>
+                <td>$15.00</td>
+            </tr>
+            <tr>
+                <td>Item 3</td>
+                <td>A description of item 3.</td>
+                <td>$20.00</td>
+            </tr>
+        </table>
     </div>
 </section>
 
