--- a/main.html
+++ b/main.html
@@ -50,7 +50,7 @@
             background-color: #555;
         }
         video {
-            width: 10%;
+            width: 20px;
             height: auto;
             margin-top: 20px;
         }
